[gd_scene load_steps=9 format=3 uid="uid://dm0f3yccbu33i"]

[ext_resource type="Script" path="res://blood_vessel.gd" id="1_nhmg3"]
[ext_resource type="PackedScene" uid="uid://cbkcwlw0kc3nk" path="res://lymphocyte.tscn" id="2_jfo2s"]
[ext_resource type="PackedScene" uid="uid://d4fbq3qboenqe" path="res://red_blood_cell.tscn" id="3_wqr8a"]
[ext_resource type="Texture2D" uid="uid://dadn2caneuudr" path="res://sprites/blood-vessel.png" id="4_mmyu8"]

[sub_resource type="TileMapPattern" id="TileMapPattern_5olyj"]
tile_data = PackedInt32Array(0, 1638400, 0, 1, 1703936, 0, 2, 1769472, 0)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pknlq"]
texture = ExtResource("4_mmyu8")
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
10:0/0 = 0
10:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:0/0/physics_layer_0/angular_velocity = 0.0
11:0/0 = 0
11:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:0/0/physics_layer_0/angular_velocity = 0.0
12:0/0 = 0
12:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:0/0/physics_layer_0/angular_velocity = 0.0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -1.75, -8, 8, 1.875, 8, 8, -8, 8)
13:0/0 = 0
13:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:0/0/physics_layer_0/angular_velocity = 0.0
13:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -1.75, 8, -8, 1.9375)
14:0/0 = 0
14:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:0/0/physics_layer_0/angular_velocity = 0.0
15:0/0 = 0
15:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:0/0/physics_layer_0/angular_velocity = 0.0
16:0/0 = 0
16:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:0/0/physics_layer_0/angular_velocity = 0.0
17:0/0 = 0
17:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:0/0/physics_layer_0/angular_velocity = 0.0
18:0/0 = 0
18:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:0/0/physics_layer_0/angular_velocity = 0.0
19:0/0 = 0
19:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:0/0/physics_layer_0/angular_velocity = 0.0
20:0/0 = 0
20:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:0/0/physics_layer_0/angular_velocity = 0.0
21:0/0 = 0
21:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
21:0/0/physics_layer_0/angular_velocity = 0.0
22:0/0 = 0
22:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
22:0/0/physics_layer_0/angular_velocity = 0.0
23:0/0 = 0
23:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
23:0/0/physics_layer_0/angular_velocity = 0.0
24:0/0 = 0
24:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
24:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
25:0/0 = 0
25:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
25:0/0/physics_layer_0/angular_velocity = 0.0
26:0/0 = 0
26:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
26:0/0/physics_layer_0/angular_velocity = 0.0
27:0/0 = 0
27:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
27:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_1jqf0"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_pknlq")
pattern_0 = SubResource("TileMapPattern_5olyj")

[sub_resource type="Curve2D" id="Curve2D_eceop"]
_data = {
"points": PackedVector2Array(22.8775, -75.6482, -22.8775, 75.6482, 1024, 0, 14.5682, -36.1029, -14.5682, 36.1029, 1000, 72, 31.5139, -22.3758, -31.5139, 22.3758, 880, 192, 66.6412, -7.30943, -66.6412, 7.30943, 632, 264, 49.6363, -2.11218, -49.6363, 2.11218, 368, 264, 91.0981, 36.2268, -91.0981, -36.2268, 0, 216)
}
point_count = 6

[node name="BloodVessel" type="Area2D"]
script = ExtResource("1_nhmg3")
spawnable_scenes = Array[PackedScene]([ExtResource("2_jfo2s"), ExtResource("3_wqr8a")])
spawnable_probabilities = Array[float]([1.0, 50.0])

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_1jqf0")
format = 2
layer_0/tile_data = PackedInt32Array(720883, 196608, 0, 786419, 196608, 0, 851955, 196608, 0, 917491, 196608, 0, 983027, 196608, 0, 1048563, 196608, 0, 1114099, 196608, 0, 1179635, 131072, 0, 720884, 196608, 0, 786420, 196608, 0, 851956, 196608, 0, 917492, 196608, 0, 983028, 196608, 0, 1048564, 196608, 0, 1114100, 196608, 0, 1179636, 131072, 0, 720885, 196608, 0, 786421, 196608, 0, 851957, 196608, 0, 917493, 196608, 0, 983029, 196608, 0, 1048565, 196608, 0, 1114101, 196608, 0, 1179637, 131072, 0, 720886, 196608, 0, 786422, 196608, 0, 851958, 196608, 0, 917494, 196608, 0, 983030, 196608, 0, 1048566, 196608, 0, 1114102, 196608, 0, 1179638, 131072, 0, 720887, 196608, 0, 786423, 196608, 0, 851959, 196608, 0, 917495, 196608, 0, 983031, 196608, 0, 1048567, 196608, 0, 1114103, 196608, 0, 589810, 1703936, 0, 655346, 1769472, 0, 720882, 458752, 0, 786418, 458752, 0, 851954, 458752, 0, 917490, 458752, 0, 983026, 458752, 0, 1048562, 458752, 0, 1114098, 458752, 0, 589811, 1769472, 0, 655347, 65536, 0, 589812, 1638400, 0, 655348, 65536, 0, 589813, 1703936, 0, 655349, 65536, 0, 589814, 1769472, 0, 655350, 65536, 0, 589815, 1638400, 0, 655351, 65536, 0, 1114104, 196608, 0, 1114105, 196608, 0, 1114106, 196608, 0, 1114107, 196608, 0, 1114108, 196608, 0, 1114109, 196608, 0, 1114110, 196608, 0, 1114111, 196608, 0, 1048575, 196608, 0, 983039, 196608, 0, 917503, 196608, 0, 851967, 196608, 0, 786430, 196608, 0, 720894, 196608, 0, 655358, 65536, 0, 589822, 1703936, 0, 655359, 65536, 0, 720895, 196608, 0, 786431, 196608, 0, 655357, 65536, 0, 655356, 65536, 0, 589820, 1769472, 0, 589819, 1703936, 0, 589818, 1638400, 0, 589817, 1769472, 0, 589816, 1703936, 0, 655352, 65536, 0, 720888, 196608, 0, 786424, 196608, 0, 786425, 196608, 0, 720889, 196608, 0, 851961, 196608, 0, 917497, 196608, 0, 983033, 196608, 0, 1048569, 196608, 0, 1048568, 196608, 0, 851960, 196608, 0, 983032, 196608, 0, 917496, 196608, 0, 851962, 196608, 0, 851963, 196608, 0, 851964, 196608, 0, 917500, 196608, 0, 917501, 196608, 0, 983037, 196608, 0, 983036, 196608, 0, 1048571, 196608, 0, 983035, 196608, 0, 1048573, 196608, 0, 1048572, 196608, 0, 1048570, 196608, 0, 1048574, 196608, 0, 983038, 196608, 0, 917502, 196608, 0, 851966, 196608, 0, 851965, 196608, 0, 786429, 196608, 0, 786428, 196608, 0, 786427, 196608, 0, 917498, 196608, 0, 983034, 196608, 0, 917499, 196608, 0, 720893, 196608, 0, 720892, 196608, 0, 720891, 196608, 0, 720890, 196608, 0, 786426, 196608, 0, 655354, 65536, 0, 655353, 65536, 0, 655355, 65536, 0, 589821, 1638400, 0, 1179647, 131072, 0, 1179646, 131072, 0, 1179645, 131072, 0, 1179644, 131072, 0, 1179643, 131072, 0, 1179642, 131072, 0, 1179641, 131072, 0, 1179640, 131072, 0, 1179639, 131072, 0, 1245171, 1638400, 0, 1245172, 1703936, 0, 1245173, 1769472, 0, 1245174, 1638400, 0, 1245175, 1703936, 0, 1245176, 1769472, 0, 1245177, 1638400, 0, 1245178, 1703936, 0, 1245179, 1769472, 0, 1245180, 1638400, 0, 1245181, 1703936, 0, 1245182, 1769472, 0, 1310709, 1638400, 0, 1310710, 1703936, 0, 1310711, 1769472, 0, 1310706, 1638400, 0, 1310707, 1703936, 0, 1310708, 1769472, 0, 1310712, 1638400, 0, 1310713, 1703936, 0, 1310714, 1769472, 0, 1310715, 1638400, 0, 1310716, 1703936, 0, 1310717, 1769472, 0, 1310718, 1638400, 0, 1310719, 1703936, 0, 1245184, 1769472, 0, 1376241, 1638400, 0, 1376242, 1703936, 0, 1376243, 1769472, 0, 1441776, 1638400, 0, 1441777, 1703936, 0, 1441778, 1769472, 0, 1376244, 1638400, 0, 1376245, 1703936, 0, 1376246, 1769472, 0, 1376247, 1638400, 0, 1376248, 1703936, 0, 1376249, 1769472, 0, 1376250, 1638400, 0, 1376251, 1703936, 0, 1376252, 1769472, 0, 1376253, 1638400, 0, 1376254, 1703936, 0, 1376255, 1769472, 0, 1441779, 1638400, 0, 1441780, 1703936, 0, 1441781, 1769472, 0, 1441782, 1638400, 0, 1441783, 1703936, 0, 1441784, 1769472, 0, 1441785, 1638400, 0, 1441786, 1703936, 0, 1441787, 1769472, 0, 1441788, 1638400, 0, 1441789, 1703936, 0, 1441790, 1769472, 0, 1245168, 1638400, 0, 1245169, 1703936, 0, 1245170, 1769472, 0, 1245165, 1638400, 0, 1245166, 1703936, 0, 1245167, 1769472, 0, 1245162, 1638400, 0, 1245163, 1703936, 0, 1245164, 1769472, 0, 1310703, 1638400, 0, 1310704, 1703936, 0, 1310705, 1769472, 0, 1310700, 1638400, 0, 1310701, 1703936, 0, 1310702, 1769472, 0, 1310697, 1638400, 0, 1310698, 1703936, 0, 1310699, 1769472, 0, 1376238, 1638400, 0, 1376239, 1703936, 0, 1376240, 1769472, 0, 1376235, 1638400, 0, 1376236, 1703936, 0, 1376237, 1769472, 0, 1376232, 1638400, 0, 1376233, 1703936, 0, 1376234, 1769472, 0, 1441773, 1638400, 0, 1441774, 1703936, 0, 1441775, 1769472, 0, 1441770, 1638400, 0, 1441771, 1703936, 0, 1441772, 1769472, 0, 1441767, 1638400, 0, 1441768, 1703936, 0, 1441769, 1769472, 0, 1179627, 1638400, 0, 1179628, 1703936, 0, 1179629, 1769472, 0, 1179630, 1638400, 0, 1179631, 1703936, 0, 1179632, 1769472, 0, 1114092, 1638400, 0, 1114093, 1703936, 0, 1114094, 1769472, 0, 1114095, 1638400, 0, 1114096, 1703936, 0, 1114097, 1769472, 0, 1048557, 1638400, 0, 1048558, 1703936, 0, 1048559, 1769472, 0, 983022, 1638400, 0, 983023, 1703936, 0, 983024, 1769472, 0, 917487, 1638400, 0, 917488, 1703936, 0, 917489, 1769472, 0, 851949, 1638400, 0, 851950, 1703936, 0, 851951, 1769472, 0, 786414, 1638400, 0, 786415, 1703936, 0, 786416, 1769472, 0, 720879, 1638400, 0, 720880, 1703936, 0, 720881, 1769472, 0, 851946, 1638400, 0, 851947, 1703936, 0, 851948, 1769472, 0, 851943, 1638400, 0, 851944, 1703936, 0, 851945, 1769472, 0, 917484, 1638400, 0, 917485, 1703936, 0, 917486, 1769472, 0, 917481, 1638400, 0, 917482, 1703936, 0, 917483, 1769472, 0, 983019, 1638400, 0, 983020, 1703936, 0, 983021, 1769472, 0, 983016, 1638400, 0, 983017, 1703936, 0, 983018, 1769472, 0, 983013, 1638400, 0, 983014, 1703936, 0, 983015, 1769472, 0, 917478, 1638400, 0, 917479, 1703936, 0, 917480, 1769472, 0, 1048554, 1638400, 0, 1048555, 1703936, 0, 1048556, 1769472, 0, 1048551, 1638400, 0, 1048552, 1703936, 0, 1048553, 1769472, 0, 1048548, 1638400, 0, 1048549, 1703936, 0, 1048550, 1769472, 0, 1114089, 1638400, 0, 1114090, 1703936, 0, 1114091, 1769472, 0, 1114086, 1638400, 0, 1114087, 1703936, 0, 1114088, 1769472, 0, 1114083, 1638400, 0, 1114084, 1703936, 0, 1114085, 1769472, 0, 1179624, 1638400, 0, 1179625, 1703936, 0, 1179626, 1769472, 0, 1179621, 1638400, 0, 1179622, 1703936, 0, 1179623, 1769472, 0, 1179618, 1638400, 0, 1179619, 1703936, 0, 1179620, 1769472, 0, 1245159, 1638400, 0, 1245160, 1703936, 0, 1245161, 1769472, 0, 1245156, 1638400, 0, 1245157, 1703936, 0, 1245158, 1769472, 0, 1245153, 1638400, 0, 1245154, 1703936, 0, 1245155, 1769472, 0, 1310694, 1638400, 0, 1310695, 1703936, 0, 1310696, 1769472, 0, 1310691, 1638400, 0, 1310692, 1703936, 0, 1310693, 1769472, 0, 1310688, 1638400, 0, 1310689, 1703936, 0, 1310690, 1769472, 0, 1376229, 1638400, 0, 1376230, 1703936, 0, 1376231, 1769472, 0, 1376226, 1638400, 0, 1376227, 1703936, 0, 1376228, 1769472, 0, 1376223, 1638400, 0, 1376224, 1703936, 0, 1376225, 1769472, 0, 1441764, 1638400, 0, 1441765, 1703936, 0, 1441766, 1769472, 0, 1441761, 1638400, 0, 1441762, 1703936, 0, 1441763, 1769472, 0, 1441758, 1638400, 0, 1441759, 1703936, 0, 1441760, 1769472, 0, 786411, 1638400, 0, 786412, 1703936, 0, 786413, 1769472, 0, 786408, 1638400, 0, 786409, 1703936, 0, 786410, 1769472, 0, 720876, 1638400, 0, 720877, 1703936, 0, 720878, 1769472, 0, 720873, 1638400, 0, 720874, 1703936, 0, 720875, 1769472, 0, 720870, 1638400, 0, 720871, 1703936, 0, 720872, 1769472, 0, 786405, 1638400, 0, 786406, 1703936, 0, 786407, 1769472, 0, 655335, 1638400, 0, 655336, 1703936, 0, 655337, 1769472, 0, 655338, 1638400, 0, 655339, 1703936, 0, 655340, 1769472, 0, 655341, 1638400, 0, 655342, 1703936, 0, 655343, 1769472, 0, 655344, 1638400, 0, 655345, 1703936, 0, 589800, 1638400, 0, 589801, 1703936, 0, 589802, 1769472, 0, 589803, 1638400, 0, 589804, 1703936, 0, 589805, 1769472, 0, 589806, 1638400, 0, 589807, 1703936, 0, 589808, 1769472, 0, 589809, 1638400, 0, 589823, 1769472, 0, 524265, 1638400, 0, 524266, 1703936, 0, 524267, 1769472, 0, 524268, 1638400, 0, 524269, 1703936, 0, 524270, 1769472, 0, 524271, 1638400, 0, 524272, 1703936, 0, 524273, 1769472, 0, 524274, 1638400, 0, 524275, 1703936, 0, 524276, 1769472, 0, 524277, 1638400, 0, 524278, 1703936, 0, 524279, 1769472, 0, 524280, 1638400, 0, 524281, 1703936, 0, 524282, 1769472, 0, 524283, 1638400, 0, 524284, 1703936, 0, 524285, 1769472, 0, 524286, 1638400, 0, 524287, 1703936, 0, 458752, 1769472, 0, 458730, 1638400, 0, 458731, 1703936, 0, 458732, 1769472, 0, 458733, 1638400, 0, 458734, 1703936, 0, 458735, 1769472, 0, 458736, 1638400, 0, 458737, 1703936, 0, 458738, 1769472, 0, 458739, 1638400, 0, 458740, 1703936, 0, 458741, 1769472, 0, 458742, 1638400, 0, 458743, 1703936, 0, 458744, 1769472, 0, 458745, 1638400, 0, 458746, 1703936, 0, 458747, 1769472, 0, 458748, 1638400, 0, 458749, 1703936, 0, 458750, 1769472, 0, 458751, 1638400, 0, 393216, 1703936, 0, 393217, 1769472, 0, 393195, 1638400, 0, 393196, 1703936, 0, 393197, 1769472, 0, 393198, 1638400, 0, 393199, 1703936, 0, 393200, 1769472, 0, 393201, 1638400, 0, 393202, 1703936, 0, 393203, 1769472, 0, 393204, 1638400, 0, 393205, 1703936, 0, 393206, 1769472, 0, 393207, 1638400, 0, 393208, 1703936, 0, 393209, 1769472, 0, 393210, 1638400, 0, 393211, 1703936, 0, 393212, 1769472, 0, 393213, 1638400, 0, 393214, 1703936, 0, 393215, 1769472, 0, 327680, 1638400, 0, 327681, 1703936, 0, 327682, 1769472, 0, 327660, 1638400, 0, 327661, 1703936, 0, 327662, 1769472, 0, 327663, 1638400, 0, 327664, 1703936, 0, 327665, 1769472, 0, 327666, 1638400, 0, 327667, 1703936, 0, 327668, 1769472, 0, 327669, 1638400, 0, 327670, 1703936, 0, 327671, 1769472, 0, 327672, 1638400, 0, 327673, 1703936, 0, 327674, 1769472, 0, 327675, 1638400, 0, 327676, 1703936, 0, 327677, 1769472, 0, 327678, 1638400, 0, 327679, 1703936, 0, 262144, 1769472, 0, 262145, 1638400, 0, 262146, 1703936, 0, 262147, 1769472, 0, 262125, 1638400, 0, 262126, 1703936, 0, 262127, 1769472, 0, 262128, 1638400, 0, 262129, 1703936, 0, 262130, 1769472, 0, 262131, 1638400, 0, 262132, 1703936, 0, 262133, 1769472, 0, 262134, 1638400, 0, 262135, 1703936, 0, 262136, 1769472, 0, 262137, 1638400, 0, 262138, 1703936, 0, 262139, 1769472, 0, 262140, 1638400, 0, 262141, 1703936, 0, 262142, 1769472, 0, 262143, 1638400, 0, 196608, 1703936, 0, 196609, 1769472, 0, 196610, 1638400, 0, 196611, 1703936, 0, 196612, 1769472, 0, 524288, 1638400, 0, 524289, 1703936, 0, 524290, 1769472, 0, 524291, 1638400, 0, 524292, 1703936, 0, 524293, 1769472, 0, 524294, 1638400, 0, 524295, 1703936, 0, 524296, 1769472, 0, 458753, 1638400, 0, 458754, 1703936, 0, 458755, 1769472, 0, 458756, 1638400, 0, 458757, 1703936, 0, 458758, 1769472, 0, 458759, 1638400, 0, 458760, 1703936, 0, 458761, 1769472, 0, 393218, 1638400, 0, 393219, 1703936, 0, 393220, 1769472, 0, 393221, 1638400, 0, 393222, 1703936, 0, 393223, 1769472, 0, 393224, 1638400, 0, 393225, 1703936, 0, 393226, 1769472, 0, 327683, 1638400, 0, 327684, 1703936, 0, 327685, 1769472, 0, 327686, 1638400, 0, 327687, 1703936, 0, 327688, 1769472, 0, 327689, 1638400, 0, 327690, 1703936, 0, 327691, 1769472, 0, 262148, 1638400, 0, 262149, 1703936, 0, 262150, 1769472, 0, 262151, 1638400, 0, 262152, 1703936, 0, 262153, 1769472, 0, 262154, 1638400, 0, 262155, 1703936, 0, 262156, 1769472, 0, 786417, 1638400, 0, 851952, 1638400, 0, 983025, 1638400, 0, 1048560, 1638400, 0, 1179633, 1638400, 0, 1179634, 1703936, 0, 1048561, 1703936, 0, 851953, 1703936, 0, 262122, 1638400, 0, 262123, 1703936, 0, 262124, 1769472, 0, 327657, 1638400, 0, 327658, 1703936, 0, 327659, 1769472, 0, 393192, 1638400, 0, 393193, 1703936, 0, 393194, 1769472, 0, 458727, 1638400, 0, 458728, 1703936, 0, 458729, 1769472, 0, 524262, 1638400, 0, 524263, 1703936, 0, 524264, 1769472, 0, 262119, 1638400, 0, 262120, 1703936, 0, 262121, 1769472, 0, 327654, 1638400, 0, 327655, 1703936, 0, 327656, 1769472, 0, 393189, 1638400, 0, 393190, 1703936, 0, 393191, 1769472, 0, 458724, 1638400, 0, 458725, 1703936, 0, 458726, 1769472, 0, 589797, 1638400, 0, 589798, 1703936, 0, 589799, 1769472, 0, 655332, 1638400, 0, 655333, 1703936, 0, 655334, 1769472, 0, 851940, 1638400, 0, 851941, 1703936, 0, 851942, 1769472, 0, 917475, 1638400, 0, 917476, 1703936, 0, 917477, 1769472, 0, 720867, 1638400, 0, 720868, 1703936, 0, 720869, 1769472, 0, 1507323, 1638400, 0, 1507324, 1703936, 0, 1507325, 1769472, 0, 1507320, 1638400, 0, 1507321, 1703936, 0, 1507322, 1769472, 0, 1507317, 1638400, 0, 1507318, 1703936, 0, 1507319, 1769472, 0, 1507314, 1638400, 0, 1507315, 1703936, 0, 1507316, 1769472, 0, 1507311, 1638400, 0, 1507312, 1703936, 0, 1507313, 1769472, 0, 1572858, 1638400, 0, 1572859, 1703936, 0, 1572860, 1769472, 0, 1572855, 1638400, 0, 1572856, 1703936, 0, 1572857, 1769472, 0, 1572852, 1638400, 0, 1572853, 1703936, 0, 1572854, 1769472, 0, 1572849, 1638400, 0, 1572850, 1703936, 0, 1572851, 1769472, 0, 1572846, 1638400, 0, 1572847, 1703936, 0, 1572848, 1769472, 0, 1638393, 1638400, 0, 1638394, 1703936, 0, 1638395, 1769472, 0, 1638390, 1638400, 0, 1638391, 1703936, 0, 1638392, 1769472, 0, 1638387, 1638400, 0, 1638388, 1703936, 0, 1638389, 1769472, 0, 1638384, 1638400, 0, 1638385, 1703936, 0, 1638386, 1769472, 0, 1638381, 1638400, 0, 1638382, 1703936, 0, 1638383, 1769472, 0, 1507308, 1638400, 0, 1507309, 1703936, 0, 1507310, 1769472, 0, 1507305, 1638400, 0, 1507306, 1703936, 0, 1507307, 1769472, 0, 1507302, 1638400, 0, 1507303, 1703936, 0, 1507304, 1769472, 0, 1507299, 1638400, 0, 1507300, 1703936, 0, 1507301, 1769472, 0, 1572843, 1638400, 0, 1572844, 1703936, 0, 1572845, 1769472, 0, 1572840, 1638400, 0, 1572841, 1703936, 0, 1572842, 1769472, 0, 1572837, 1638400, 0, 1572838, 1703936, 0, 1572839, 1769472, 0, 1572834, 1638400, 0, 1572835, 1703936, 0, 1572836, 1769472, 0, 1638378, 1638400, 0, 1638379, 1703936, 0, 1638380, 1769472, 0, 1638375, 1638400, 0, 1638376, 1703936, 0, 1638377, 1769472, 0, 1638372, 1638400, 0, 1638373, 1703936, 0, 1638374, 1769472, 0, 1638369, 1638400, 0, 1638370, 1703936, 0, 1638371, 1769472, 0, 1507296, 1638400, 0, 1507297, 1703936, 0, 1507298, 1769472, 0, 1572831, 1638400, 0, 1572832, 1703936, 0, 1572833, 1769472, 0, 1638366, 1638400, 0, 1638367, 1703936, 0, 1638368, 1769472, 0, 1638396, 1638400, 0, 1638397, 1703936, 0, 1638398, 1769472, 0, 1638399, 1638400, 0, 1572864, 1703936, 0, 1572865, 1769472, 0, 1572866, 1638400, 0, 1572867, 1703936, 0, 1572868, 1769472, 0, 1572869, 1638400, 0, 1572870, 1703936, 0, 1572871, 1769472, 0, 1572861, 1638400, 0, 1572862, 1703936, 0, 1572863, 1769472, 0, 1507328, 1638400, 0, 1507329, 1703936, 0, 1507330, 1769472, 0, 1507331, 1638400, 0, 1507332, 1703936, 0, 1507333, 1769472, 0, 1507334, 1638400, 0, 1507335, 1703936, 0, 1507336, 1769472, 0, 1507326, 1638400, 0, 1507327, 1703936, 0, 1441792, 1769472, 0, 1441793, 1638400, 0, 1441794, 1703936, 0, 1441795, 1769472, 0, 1441796, 1638400, 0, 1441797, 1703936, 0, 1441798, 1769472, 0, 1441799, 1638400, 0, 1441800, 1703936, 0, 1441801, 1769472, 0, 1441791, 1638400, 0, 1376256, 1703936, 0, 1376257, 1769472, 0, 1376258, 1638400, 0, 1376259, 1703936, 0, 1376260, 1769472, 0, 1376261, 1638400, 0, 1376262, 1703936, 0, 1376263, 1769472, 0, 1376264, 1638400, 0, 1376265, 1703936, 0, 1376266, 1769472, 0, 1310720, 1638400, 0, 1310721, 1703936, 0, 1310722, 1769472, 0, 1310723, 1638400, 0, 1310724, 1703936, 0, 1310725, 1769472, 0, 1310726, 1638400, 0, 1310727, 1703936, 0, 1310728, 1769472, 0, 1310729, 1638400, 0, 1310730, 1703936, 0, 1310731, 1769472, 0, 1245185, 1638400, 0, 1245186, 1703936, 0, 1245187, 1769472, 0, 1245188, 1638400, 0, 1245189, 1703936, 0, 1245190, 1769472, 0, 1245191, 1638400, 0, 1245192, 1703936, 0, 1245193, 1769472, 0, 1245183, 1638400, 0, 1179648, 1703936, 0, 1179649, 1769472, 0, 1179650, 1638400, 0, 1179651, 1703936, 0, 1179652, 1769472, 0)

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(2.24242, 0)
scale = Vector2(0.280303, 0.280303)
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(-8, 599.351, -8, 941.838, 163.243, 998.919, 1276.32, 1113.08, 2246.7, 1113.08, 3188.54, 856.216, 3816.43, 256.865, 3873.51, 0, 3416.87, 0, 3359.78, 228.324, 3045.84, 542.27, 2218.16, 770.595, 1276.32, 799.135, 163.243, 656.432)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(8, 0)
scale = Vector2(0.279711, 0.279711)
polygon = PackedVector2Array(143.005, 1001.03, 1258.44, 1115.44, 2230.87, 1115.44, 3174.71, 858.028, 3803.93, 257.409, 3861.13, 0, 3403.51, 0, 3346.31, 228.808, 3031.7, 543.418, 2202.27, 772.226, 1258.44, 800.826, 143.005, 657.822, -28.601, 600.62, -28.601, 943.831)

[node name="Path2D" type="Path2D" parent="."]
unique_name_in_owner = true
curve = SubResource("Curve2D_eceop")

[node name="UpperMembrane" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="Polygon2D" type="Polygon2D" parent="UpperMembrane"]
color = Color(0.603922, 0.117647, 0.0745098, 1)
polygon = PackedVector2Array(0, 160, 0, 168, 48, 184, 360, 224, 624, 216, 856, 152, 944, 64, 960, 0, 944, 0, 928, 64, 848, 144, 624, 208, 360, 216, 48, 176)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="UpperMembrane"]
polygon = PackedVector2Array(0, 168, 48, 184, 360, 224, 624, 216, 856, 152, 944, 64, 960, 0, 944, 0, 928, 64, 848, 144, 624, 208, 360, 216, 48, 176, 0, 160)

[node name="UpperMembraneArea" type="Area2D" parent="UpperMembrane"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="UpperMembrane/UpperMembraneArea"]
polygon = PackedVector2Array(0, 168, 48, 184, 360, 224, 624, 216, 856, 152, 944, 64, 960, 0, 944, 0, 928, 64, 848, 144, 624, 208, 360, 216, 48, 176, 0, 160)

[node name="LowerMembrane" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="Polygon2D" type="Polygon2D" parent="LowerMembrane"]
color = Color(0.658824, 0, 0, 1)
polygon = PackedVector2Array(0, 264, 48, 280, 360, 312, 632, 312, 896, 240, 1072, 72, 1088, 0, 1096, 0, 1080, 72, 904, 248, 640, 320, 360, 320, 48, 288, 0, 272)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LowerMembrane"]
polygon = PackedVector2Array(0, 264, 48, 280, 360, 312, 632, 312, 896, 240, 1072, 72, 1088, 0, 1096, 0, 1080, 72, 904, 248, 640, 320, 360, 320, 48, 288, 0, 272)

[node name="LowerMembraneArea" type="Area2D" parent="LowerMembrane"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LowerMembrane/LowerMembraneArea"]
polygon = PackedVector2Array(0, 264, 48, 280, 360, 312, 632, 312, 896, 240, 1072, 72, 1088, 0, 1096, 0, 1080, 72, 904, 248, 640, 320, 360, 320, 48, 288, 0, 272)

[node name="Spawned" type="Node2D" parent="."]
unique_name_in_owner = true

[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="UpperMembrane/UpperMembraneArea" to="." method="_on_membrane_area_body_entered"]
[connection signal="body_exited" from="UpperMembrane/UpperMembraneArea" to="." method="_on_membrane_area_body_exited"]
[connection signal="body_entered" from="LowerMembrane/LowerMembraneArea" to="." method="_on_membrane_area_body_entered"]
[connection signal="body_exited" from="LowerMembrane/LowerMembraneArea" to="." method="_on_membrane_area_body_exited"]
